--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,7 @@
         <file>TimePicker.qml</file>
         <file>Player.js</file>
         <file>SCHEDULE.qml</file>
+        <file>3.png</file>
+        <file>mi.png</file>
     </qresource>
 </RCC>
